--- a/.gitmodules
+++ b/.gitmodules
@@ -33,3 +33,6 @@
 [submodule "rts/lib/fastgltf"]
 	path = rts/lib/fastgltf
 	url = https://github.com/spnda/fastgltf
+[submodule "rts/lib/simdjson"]
+	path = rts/lib/simdjson
+	url = https://github.com/simdjson/simdjson
