--- a/rts/Rendering/CMakeLists.txt
+++ b/rts/Rendering/CMakeLists.txt
@@ -89,6 +89,7 @@ set(sources_engine_Rendering
 		"${CMAKE_CURRENT_SOURCE_DIR}/Map/InfoTexture/Modern/ModernInfoTexture.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/Map/InfoTexture/Modern/Radar.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/Models/3DModel.cpp"
+		"${CMAKE_CURRENT_SOURCE_DIR}/Models/3DModelAnimation.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/Models/3DModelVAO.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/Models/3DOParser.cpp"
 		"${CMAKE_CURRENT_SOURCE_DIR}/Models/AssIO.cpp"
