--- a/AI/CMakeLists.txt
+++ b/AI/CMakeLists.txt
@@ -20,6 +20,7 @@ set(rts             "${CMAKE_SOURCE_DIR}/rts")
 
 include_directories(
 	${rts}
+	${rts}/lib
 	${CMAKE_BINARY_DIR}/src-generated/engine
 	${rts}/ExternalAI/Interface
 	Wrappers
